--- a/erp-jgsf/src/main/webapp/error404.html
+++ b/erp-jgsf/src/main/webapp/error404.html
@@ -25,7 +25,7 @@
 <body><section class="mod-page-body">
 <div class="mod-page-main wordwrap clearfix">
 <div class="x-page-container">
-<div class="mod-notfound grid-98"><img class="img-notfound" height="320" src="static/images/notfound.gif" width="520">
+<div class="mod-notfound grid-98"><img class="img-notfound" height="320" src="static/img/notfound.gif" width="520">
 <p style="FONT-SIZE: 24px; LINE-HEIGHT: 70px">啊~哦~ 您要查看的页面不存在或已删除！</p>
 <p style="MARGIN-BOTTOM: 30px">请检查您输入的网址是否正确，或者点击链接继续浏览空间</p>
 <p style="FONT-SIZE: 14px; LINE-HEIGHT: 20px"> <a href="/index">网站首页</a> </p></div></div></div></section>
