--- a/erp-jgsf/src/main/webapp/index.html
+++ b/erp-jgsf/src/main/webapp/index.html
@@ -37,7 +37,7 @@
 		<link rel="icon" href="static/img/favicon/favicon.ico" type="image/x-icon">
 
 		<!-- #GOOGLE FONT -->
-		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,300,400,700">
+		<link rel="stylesheet" href="static/css/opensans.css">
 
 		<!-- #APP SCREEN / ICONS -->
 		<!-- Specifying a Webpage Icon for Web Clip 
@@ -531,10 +531,9 @@
 		  //  var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  //})();
 		  ;!function(){
-			  var layer = layui.layer
-			  ,form = layui.form;
+			  var layer = layui.layer,form = layui.form;
 			  
-			  layer.msg('Hello World');
+			 // layer.msg('Hello World');
 			}();
 		</script>
 
